out#
running install
running build
running build_py
running build_ext
building 'spiderman._web' extension
C compiler: gcc -pthread -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -fPIC

compile options: '-I/home/tom/anaconda3/lib/python3.5/site-packages/numpy/core/include -I/home/tom/anaconda3/include/python3.5m -c'
Warning: Can't read registry to find the necessary compiler setting
Make sure that Python modules winreg, win32api or win32con are installed.
gcc: c_src/blackbody.c
In file included from c_src/blackbody.c:4:0:
c_src/spline.h:4:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double *basis_matrix_b_uni ( );
 ^~~~~~
c_src/spline.h:6:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double *basis_matrix_bezier ( );
 ^~~~~~
c_src/spline.h:7:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double *basis_matrix_hermite ( );
 ^~~~~~
c_src/spline.h:12:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double *basis_matrix_overhauser_uni_l ( );
 ^~~~~~
c_src/spline.h:13:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double *basis_matrix_overhauser_uni_r ( );
 ^~~~~~
gcc: c_src/legendre_polynomial.c
In file included from c_src/legendre_polynomial.c:7:0:
c_src/legendre_polynomial.h:30:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double r8_epsilon ( );
 ^~~~~~
c_src/legendre_polynomial.c: In function ‘pn_pair_product’:
c_src/legendre_polynomial.c:2225:10: warning: variable ‘x’ set but not used [-Wunused-but-set-variable]
   double x;
          ^
c_src/legendre_polynomial.c: At top level:
c_src/legendre_polynomial.c:2590:8: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double r8_epsilon ( )
        ^~~~~~~~~~
c_src/legendre_polynomial.c: In function ‘imtqlx’:
c_src/legendre_polynomial.c:401:3: warning: ‘m’ may be used uninitialized in this function [-Wmaybe-uninitialized]
   for ( ii = 2; ii <= m; ii++ )
   ^~~
gcc: c_src/orthographic.c
gcc: c_src/brightness_maps.c
In file included from c_src/brightness_maps.c:2:0:
c_src/legendre_polynomial.h:30:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 double r8_epsilon ( );
 ^~~~~~
gcc: c_src/generate.c
c_src/generate.c: In function ‘map_model’:
c_src/generate.c:16:9: warning: unused variable ‘n_bb_seg’ [-Wunused-variable]
     int n_bb_seg = 10;
         ^~~~~~~~
c_src/generate.c:12:15: warning: variable ‘l2’ set but not used [-Wunused-but-set-variable]
     double l1,l2,R_mid,theta_mid,mid_x,mid_y;
               ^~
c_src/generate.c:12:12: warning: variable ‘l1’ set but not used [-Wunused-but-set-variable]
     double l1,l2,R_mid,theta_mid,mid_x,mid_y;
            ^~
c_src/generate.c:11:12: warning: unused variable ‘point_T’ [-Wunused-variable]
     double point_T,mu,p_t_bright;
            ^~~~~~~
c_src/generate.c: In function ‘call_map_model’:
c_src/generate.c:136:16: warning: unused variable ‘point_b’ [-Wunused-variable]
         double point_b = Uniform_b(brightness_params[0]);
                ^~~~~~~
c_src/generate.c:141:16: warning: unused variable ‘point_b’ [-Wunused-variable]
         double point_b = bb_interp(point_T, bb_g);
                ^~~~~~~
c_src/generate.c:146:16: warning: unused variable ‘point_b’ [-Wunused-variable]
         double point_b = Two_b(la,lo,p_day,p_night);
                ^~~~~~~
c_src/generate.c:153:16: warning: unused variable ‘point_b’ [-Wunused-variable]
         double point_b = bb_interp(point_T, bb_g);
                ^~~~~~~
c_src/generate.c:162:16: warning: unused variable ‘point_b’ [-Wunused-variable]
         double point_b = bb_interp(point_T, bb_g);
                ^~~~~~~
c_src/generate.c:166:16: warning: unused variable ‘point_b’ [-Wunused-variable]
         double point_b = spherical(la,lo,brightness_params);
                ^~~~~~~
c_src/generate.c:173:15: warning: unused variable ‘point_b’ [-Wunused-variable]
        double point_b = bb_interp(point_T, bb_g);
               ^~~~~~~
c_src/generate.c:186:15: warning: unused variable ‘point_b’ [-Wunused-variable]
        double point_b = bb_interp(point_T, bb_g);
               ^~~~~~~
c_src/generate.c:190:27: error: ‘point_b’ undeclared (first use in this function)
     printf("point_b %f\n",point_b);
                           ^~~~~~~
c_src/generate.c:190:27: note: each undeclared identifier is reported only once for each function it appears in
c_src/generate.c:124:9: warning: unused variable ‘n_bb_seg’ [-Wunused-variable]
     int n_bb_seg = 10;
         ^~~~~~~~
c_src/generate.c:123:12: warning: unused variable ‘R’ [-Wunused-variable]
     double R = 1.0;
            ^
c_src/generate.c:121:15: warning: variable ‘l2’ set but not used [-Wunused-but-set-variable]
     double l1,l2;
               ^~
c_src/generate.c:121:12: warning: variable ‘l1’ set but not used [-Wunused-but-set-variable]
     double l1,l2;
            ^~
c_src/generate.c:120:23: warning: unused variable ‘p_t_bright’ [-Wunused-variable]
     double point_T,mu,p_t_bright;
                       ^~~~~~~~~~
c_src/generate.c:120:20: warning: unused variable ‘mu’ [-Wunused-variable]
     double point_T,mu,p_t_bright;
                    ^~
c_src/generate.c:120:12: warning: unused variable ‘point_T’ [-Wunused-variable]
     double point_T,mu,p_t_bright;
            ^~~~~~~
c_src/generate.c: In function ‘generate_planet’:
c_src/generate.c:197:26: warning: unused variable ‘m’ [-Wunused-variable]
     double central, s_r, m;
                          ^
c_src/generate.c: In function ‘call_map_model’:
c_src/generate.c:194:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
c_src/generate.c: In function âmap_modelâ:
c_src/generate.c:16:9: warning: unused variable ân_bb_segâ [-Wunused-variable]
     int n_bb_seg = 10;
         ^~~~~~~~
c_src/generate.c:12:15: warning: variable âl2â set but not used [-Wunused-but-set-variable]
     double l1,l2,R_mid,theta_mid,mid_x,mid_y;
               ^~
c_src/generate.c:12:12: warning: variable âl1â set but not used [-Wunused-but-set-variable]
     double l1,l2,R_mid,theta_mid,mid_x,mid_y;
            ^~
c_src/generate.c:11:12: warning: unused variable âpoint_Tâ [-Wunused-variable]
     double point_T,mu,p_t_bright;
            ^~~~~~~
c_src/generate.c: In function âcall_map_modelâ:
c_src/generate.c:136:16: warning: unused variable âpoint_bâ [-Wunused-variable]
         double point_b = Uniform_b(brightness_params[0]);
                ^~~~~~~
c_src/generate.c:141:16: warning: unused variable âpoint_bâ [-Wunused-variable]
         double point_b = bb_interp(point_T, bb_g);
                ^~~~~~~
c_src/generate.c:146:16: warning: unused variable âpoint_bâ [-Wunused-variable]
         double point_b = Two_b(la,lo,p_day,p_night);
                ^~~~~~~
c_src/generate.c:153:16: warning: unused variable âpoint_bâ [-Wunused-variable]
         double point_b = bb_interp(point_T, bb_g);
                ^~~~~~~
c_src/generate.c:162:16: warning: unused variable âpoint_bâ [-Wunused-variable]
         double point_b = bb_interp(point_T, bb_g);
                ^~~~~~~
c_src/generate.c:166:16: warning: unused variable âpoint_bâ [-Wunused-variable]
         double point_b = spherical(la,lo,brightness_params);
                ^~~~~~~
c_src/generate.c:173:15: warning: unused variable âpoint_bâ [-Wunused-variable]
        double point_b = bb_interp(point_T, bb_g);
               ^~~~~~~
c_src/generate.c:186:15: warning: unused variable âpoint_bâ [-Wunused-variable]
        double point_b = bb_interp(point_T, bb_g);
               ^~~~~~~
c_src/generate.c:190:27: error: âpoint_bâ undeclared (first use in this function)
     printf("point_b %f\n",point_b);
                           ^~~~~~~
c_src/generate.c:190:27: note: each undeclared identifier is reported only once for each function it appears in
c_src/generate.c:124:9: warning: unused variable ân_bb_segâ [-Wunused-variable]
     int n_bb_seg = 10;
         ^~~~~~~~
c_src/generate.c:123:12: warning: unused variable âRâ [-Wunused-variable]
     double R = 1.0;
            ^
c_src/generate.c:121:15: warning: variable âl2â set but not used [-Wunused-but-set-variable]
     double l1,l2;
               ^~
c_src/generate.c:121:12: warning: variable âl1â set but not used [-Wunused-but-set-variable]
     double l1,l2;
            ^~
c_src/generate.c:120:23: warning: unused variable âp_t_brightâ [-Wunused-variable]
     double point_T,mu,p_t_bright;
                       ^~~~~~~~~~
c_src/generate.c:120:20: warning: unused variable âmuâ [-Wunused-variable]
     double point_T,mu,p_t_bright;
                    ^~
c_src/generate.c:120:12: warning: unused variable âpoint_Tâ [-Wunused-variable]
     double point_T,mu,p_t_bright;
            ^~~~~~~
c_src/generate.c: In function âgenerate_planetâ:
c_src/generate.c:197:26: warning: unused variable âmâ [-Wunused-variable]
     double central, s_r, m;
                          ^
c_src/generate.c: In function âcall_map_modelâ:
c_src/generate.c:194:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
